added jel codes

--- a/lyx/model.lyx
+++ b/lyx/model.lyx
@@ -196,6 +196,14 @@ This paper estimates a lifecycle model of consumption, housing choice and
  policies.
 \end_layout
 
+\begin_layout Standard
+
+\series bold
+JEL-Codes: 
+\series default
+J6, R23, R21
+\end_layout
+
 \begin_layout Abstract
 \begin_inset ERT
 status open
@@ -297,7 +305,7 @@ West South Central contains Arkansas, Louisiana, Oklahoma and Texas, Pacific
  Division level.
  Available at 
 \begin_inset Flex URL
-status open
+status collapsed
 
 \begin_layout Plain Layout
 
