--- a/lyx/slides.lyx
+++ b/lyx/slides.lyx
@@ -135,7 +135,7 @@ Sciences Po
 \end_layout
 
 \begin_layout Date
-URBAN workshop, U Copenhagen, 22/9/2016
+Barcelona GSE Summer Forum 2017
 \end_layout
 
 \begin_layout Frame
@@ -6280,7 +6280,7 @@ status open
 \backslash
 input{
 \backslash
-Dropbox/model/experiments/HC_friction/decompose.tex}
+Dropbox/model/experiments/decompose_MC/decompose_MC.tex}
 \end_layout
 
 \end_inset
