--- a/lyx/model.lyx
+++ b/lyx/model.lyx
@@ -1917,7 +1917,7 @@ name "tab:D2D-probit"
 \begin_inset Float figure
 wide false
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \noindent
@@ -1960,7 +1960,7 @@ name "fig:Regional-House-Price-data"
 \begin_inset Float figure
 wide false
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \noindent
